manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
      - name: todo-ui
        image: g2acrdevtodoapp01.azurecr.io/todo-ui:v4
        ports:
        - containerPort: 80
